force-app/main/default/objects/HmK_Product__c/HmK_Product__c.object-meta.xml
<CustomObject>
    <label>HmK_Product</label>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>HmK_Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>