force-app/main/default/objects/HmK_Product__c/fields/Product_ID__c.field-meta.xml
<CustomField>
    <fullName>Product_ID__c</fullName>
    <externalId>true</externalId>
    <label>Product ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>